added layout for the project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <section class="options">
+    Type Checker
+  </section>
+  <section class="output">
+    The quick brown fox jumps over the lazy dog
+  </section>
 </body>
 </html>
