initial setup for options section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
   <section class="options">
-    Type Checker
+    <h1>Type Checker</h1>
+    <div class="option">
+      <label>Your text</label>
+      <input type="text" name="sentence" placeholder="The quick brown fox...">
+    </div>
   </section>
   <section class="output">
     The quick brown fox jumps over the lazy dog
