added two way typing with JS

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <input type="text" name="sentence" placeholder="The quick brown fox...">
     </div>
   </section>
-  <section class="output">
-    The quick brown fox jumps over the lazy dog
-  </section>
+  <textarea class="output">The quick brown fox jumps over the lazy dog</textarea>
+  <script src="js/typechecker.js"></script>
 </body>
 </html>
