added a range tag for type size

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <label>Your text</label>
       <input type="text" name="sentence" placeholder="The quick brown fox...">
     </div>
+    <div class="option">
+      <label>Type Size <span>64px</span></label>
+      <input type="range" name="typesize" min=12 max=200 value=64>
+    </div>
   </section>
   <textarea class="output">The quick brown fox jumps over the lazy dog</textarea>
   <script src="js/typechecker.js"></script>
