--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" name="sentence" placeholder="The quick brown fox...">
     </div>
     <div class="option">
-      <label>Type Size <span>64px</span></label>
+      <label>Type Size <span class="typesize-output">64px</span></label>
       <input type="range" name="typesize" min=12 max=200 value=64>
     </div>
   </section>
