added select box for choosing a different typeface

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       <input type="text" name="sentence" placeholder="The quick brown fox...">
     </div>
     <div class="option">
+      <label>Typeface</label>
+      <select name="typeface">
+        <option value="Fira Sans">Fira Sans</option>
+        <option value="Prompt">Prompt</option>
+        <option value="Taviraj">Taviraj</option>
+        <option value="Trirong">Trirong</option>
+      </select>
+    </div>
+    <div class="option">
       <label>Type Size <span class="typesize-output">64px</span></label>
       <input type="range" name="typesize" min=12 max=200 value=64>
     </div>
