--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <input type="range" name="typesize" min=12 max=200 value=64>
     </div>
     <div class="option">
+      <label>Font Weight <span class="fontweight-output">400</span></label>
+      <input type="range" name="fontweight" min=100 max=900 value=400 step="100">
+    </div>
+    <div class="option">
       <label>Leading <span class="lineheight-output">1.5</span></label>
       <input type="range" name="lineheight" min=0.75 max=2.5 value=1.5 step=0.25>
     </div>
