--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
       <label>Italic</label>
       <input type="checkbox" name="italic">
     </div>
+    <div class="option">
+      <label>Colors</label>
+      <div class="colors">
+        <div style="background-color:#2a2a2a;color:#ffffff;">a</div>
+        <div style="background-color:#ffffff;color:#2a2a2a;">a</div>
+        <div style="background-color:#63ff03;color:#2a2a2a;">a</div>
+        <div style="background-color:#ee0073;color:#ffffff;">a</div>
+      </div>
+    </div>
   </section>
   <textarea class="output">The quick brown fox jumps over the lazy dog</textarea>
   <script src="js/typechecker.js"></script>
